// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options as array of strings renders checkbox group 1`] = `
<div>
  <div
    class="react-combo-boxes-checkbox"
  >
    <input
      class="react-combo-boxes-checkbox__input"
      id="id_option_apple"
      name="name"
      type="checkbox"
      value="Apple"
    />
    <label
      class="react-combo-boxes-checkbox__label"
      for="id_option_apple"
    >
      Apple
    </label>
  </div>
  <div
    class="react-combo-boxes-checkbox"
  >
    <input
      class="react-combo-boxes-checkbox__input"
      id="id_option_banana"
      name="name"
      type="checkbox"
      value="Banana"
    />
    <label
      class="react-combo-boxes-checkbox__label"
      for="id_option_banana"
    >
      Banana
    </label>
  </div>
  <div
    class="react-combo-boxes-checkbox"
  >
    <input
      class="react-combo-boxes-checkbox__input"
      id="id_option_orange"
      name="name"
      type="checkbox"
      value="Orange"
    />
    <label
      class="react-combo-boxes-checkbox__label"
      for="id_option_orange"
    >
      Orange
    </label>
  </div>
</div>
`;

exports[`options options as array of objects group renders grouped options 1`] = `
<div>
  <div
    class="react-combo-boxes-checkbox"
  >
    <input
      class="react-combo-boxes-checkbox__input"
      id="id_option_apple"
      name="name"
      type="checkbox"
      value="Apple"
    />
    <label
      class="react-combo-boxes-checkbox__label"
      for="id_option_apple"
    >
      Apple
    </label>
  </div>
  <div
    class="react-combo-boxes-checkbox-group"
  >
    <div
      class="react-combo-boxes-checkbox-group__label"
    >
      Citrus
    </div>
    <div
      class="react-combo-boxes-checkbox"
    >
      <input
        class="react-combo-boxes-checkbox__input"
        id="id_option_orange"
        name="name"
        type="checkbox"
        value="Orange"
      />
      <label
        class="react-combo-boxes-checkbox__label"
        for="id_option_orange"
      >
        <span
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Citrus 
        </span>
        Orange
      </label>
    </div>
    <div
      class="react-combo-boxes-checkbox"
    >
      <input
        class="react-combo-boxes-checkbox__input"
        id="id_option_lemon"
        name="name"
        type="checkbox"
        value="Lemon"
      />
      <label
        class="react-combo-boxes-checkbox__label"
        for="id_option_lemon"
      >
        <span
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Citrus 
        </span>
        Lemon
      </label>
    </div>
  </div>
  <div
    class="react-combo-boxes-checkbox-group"
  >
    <div
      class="react-combo-boxes-checkbox-group__label"
    >
      Berry
    </div>
    <div
      class="react-combo-boxes-checkbox"
    >
      <input
        class="react-combo-boxes-checkbox__input"
        id="id_option_raspberry"
        name="name"
        type="checkbox"
        value="Raspberry"
      />
      <label
        class="react-combo-boxes-checkbox__label"
        for="id_option_raspberry"
      >
        <span
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Berry 
        </span>
        Raspberry
      </label>
    </div>
    <div
      class="react-combo-boxes-checkbox"
    >
      <input
        class="react-combo-boxes-checkbox__input"
        id="id_option_strawberry"
        name="name"
        type="checkbox"
        value="Strawberry"
      />
      <label
        class="react-combo-boxes-checkbox__label"
        for="id_option_strawberry"
      >
        <span
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Berry 
        </span>
        Strawberry
      </label>
    </div>
  </div>
</div>
`;
